--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -12,11 +12,9 @@
   margin: 0;
 }
 
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+/* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
+.clearfix:before, .clearfix:after { content: " "; display: table; }
+.clearfix:after { clear: both; }
 
 /* HMTL */
 body {
@@ -372,82 +370,47 @@ a {
 
 
 
-.btn {
-  border: none;
-  background: #34495e;
-  color: white;
-  font-size: 16.5px;
-  text-decoration: none;
-  text-shadow: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  -webkit-transition: 0.25s;
-  -moz-transition: 0.25s;
-  -o-transition: 0.25s;
-  transition: 0.25s;
-  -webkit-backface-visibility: hidden; }
-  .btn:hover, .btn:focus {
-    background-color: #4e6d8d;
-    color: white;
-    -webkit-transition: 0.25s;
-    -moz-transition: 0.25s;
-    -o-transition: 0.25s;
-    transition: 0.25s;
-    -webkit-backface-visibility: hidden; }
-  .btn:active, .btn.active {
-    background-color: #2c3e50;
-    color: rgba(255, 255, 255, 0.75);
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none; }
-  .btn.disabled, .btn[disabled] {
-    background-color: #95a5a6;
-    color: white; }
-  .btn.btn-large {
-    padding-bottom: 12px;
-    padding-top: 13px; }
-  .btn.btn-primary {
-    background-color: #1abc9c; }
-    .btn.btn-primary:hover, .btn.btn-primary:focus {
-      background-color: #2fe2bf; }
-    .btn.btn-primary:active, .btn.btn-primary.active {
-      background-color: #16a085; }
-  .btn.btn-info {
-    background-color: #3498db; }
-    .btn.btn-info:hover, .btn.btn-info:focus {
-      background-color: #5dade2; }
-    .btn.btn-info:active, .btn.btn-info.active {
-      background-color: #2383c4; }
-  .btn.btn-danger {
-    background-color: #e74c3c; }
-    .btn.btn-danger:hover, .btn.btn-danger:focus {
-      background-color: #ec7063; }
-    .btn.btn-danger:active, .btn.btn-danger.active {
-      background-color: #dc2d1b; }
-  .btn.btn-success {
-    background-color: #2ecc71; }
-    .btn.btn-success:hover, .btn.btn-success:focus {
-      background-color: #55d98d; }
-    .btn.btn-success:active, .btn.btn-success.active {
-      background-color: #27ad60; }
-  .btn.btn-warning {
-    background-color: #f1c40f; }
-    .btn.btn-warning:hover, .btn.btn-warning:focus {
-      background-color: #f4d03f; }
-    .btn.btn-warning:active, .btn.btn-warning.active {
-      background-color: #cea70c; }
-  .btn-toolbar .btn {
-    font-size: 18px;
-    padding: 10px 14px 9px; }
-    .btn-toolbar .btn:first-child {
-      -webkit-border-radius: 6px 0 0 6px;
-      -moz-border-radius: 6px 0 0 6px;
-      border-radius: 6px 0 0 6px; }
-    .btn-toolbar .btn:last-child {
-      -webkit-border-radius: 0 6px 6px 0;
-      -moz-border-radius: 0 6px 6px 0;
-      border-radius: 0 6px 6px 0; }
 
-.btn-toolbar .btn.active {
-  color: white; }
+
+
+
+
+
+	.resources
+	{
+		display: table;
+		margin-top: 15px;
+	}
+
+	.resources > .resource
+	{
+		display: table;
+		min-width: 120px;
+		padding: 50px 8px;
+		/* background: #fff; */
+		border: 1px solid #34495E;
+		
+		margin-bottom: 3px;
+		text-align: center;
+	}
+	.resources > .resource:hover
+	{
+	 
+		background: #16A085;
+		border: 1px solid #16A085;
+		cursor: pointer;
+	}
+	
+	.resources > .resource a {
+  
+  color: #1ABC9C !important;
+  font-weight: 700;
+}
+
+.resources > .resource a:hover {
+  color: #ECF0F1 !important;
+}
+	
+	.left { float: left; }
+	.right { float: right; }
+	.clear { clear: both; }
